--- a/activity/apache.yml
+++ b/activity/apache.yml
@@ -3,7 +3,7 @@
   hosts: all
   become: yes
   tasks: 
-    - name: Install apache httpd  (state=present is optional)
+    - name: Install apache httpd
       apt:
         name: apache2
         state: present
