--- a/activity/apache.yml
+++ b/activity/apache.yml
@@ -3,9 +3,10 @@
   hosts: all
   become: yes
   tasks: 
-    - name: Install apache httpd
+    - name: Install apache2
       apt:
         name: apache2
+        update_cache: yes
         state: present
         
   
