--- a/activity/apache.yml
+++ b/activity/apache.yml
@@ -8,5 +8,18 @@
         name: apache2
         update_cache: yes
         state: present
-        
+    - name: install php modules
+      apt:
+        name:
+          - php 
+          - libapache2-mod-php 
+          - php-mysql 
+        state: present 
+    - name: create info.php
+      copy:
+        dest: /var/www/html/info.php
+        content: |
+          <?php 
+          phpinfo(); 
+          ?>     
   
