--- a/activity/tomcat.yml
+++ b/activity/tomcat.yml
@@ -15,5 +15,6 @@
     - name: Download tomcat
       get_url:
         url: https://dlcdn.apache.org/tomcat/tomcat-9/v9.0.54/bin/apache-tomcat-9.0.54.tar.gz
+        dest: /tmp
           
    
