--- a/activity/tomcat.yml
+++ b/activity/tomcat.yml
@@ -12,9 +12,11 @@
       ansible.builtin.user:
         name: tomcat
         shell: /bin/false
+        home: /opt/tomcat/
+        state: present
     - name: Download tomcat
       get_url:
         url: https://dlcdn.apache.org/tomcat/tomcat-9/v9.0.54/bin/apache-tomcat-9.0.54.tar.gz
-        dest: /tmp
+        dest: /opt/tomcat/
           
    
