--- a/activity/tomcat.yml
+++ b/activity/tomcat.yml
@@ -17,5 +17,9 @@
       get_url:
         url: "https://dlcdn.apache.org/tomcat/tomcat-9/v9.0.56/bin/apache-tomcat-9.0.56.tar.gz"
         dest: "/tmp/apache-tomcat-9.0.56.tar.gz"
+    - name: Extract tar file
+      ansible.builtin.unarchive:
+        src: apache-tomcat-9.0.54.tar.gz
+        dest: /opt/tomcat/
           
    
