--- a/activity/tomcat.yml
+++ b/activity/tomcat.yml
@@ -1,26 +1,31 @@
 ---
-- name: Install tomcat9
-  hosts: all
+- name: install and configure tomcat 9
+  hosts: appserver
   become: yes
+  vars:
+    java_package: openjdk-11-jdk
+    tomcat_username: tomcat
+    tomcat_home: /opt/tomcat
+    tomcat_shell: /bin/false
+    tomcat_version: '9.0.54'
+    tomcat_service_dest: /etc/systemd/system/tomcat.service
   tasks:
-    - name: install openjdk-11-jdk
+    - name: update packages and install java
       apt:
-        name: tomcat9
+        name: "{{ java_package }}"
         update_cache: yes
         state: present
-    - name: tomcat
+    - name: add a tomcat user
       ansible.builtin.user:
-        name: tomcat
-        shell: /bin/false
+        name: "{{ tomcat_username }}"
+        home: "{{ tomcat_home }}"
+        shell: "{{ tomcat_shell }}"
         state: present
-    - name: Download tomcat
+    - name: download the tomcat distribution
       get_url:
-        url: "https://dlcdn.apache.org/tomcat/tomcat-9/v9.0.56/bin/apache-tomcat-9.0.56.tar.gz"
-        dest: "/tmp/apache-tomcat-9.0.56.tar.gz"
-    - name: Extract tar file
+        url: "https://archive.apache.org/dist/tomcat/tomcat-9/v{{ tomcat_version }}/bin/apache-tomcat-{{ tomcat_version }}.tar.gz"
+        dest: "/tmp/apache-tomcat-{{ tomcat_version }}.tar.gz"
+    - name: untar the tomcat distribution
       ansible.builtin.unarchive:
-        src: "/tmp/apache-tomcat-9.0.56.tar.gz"
-        dest: /bin/false
-        remote_src: yes
-          
-   
+        src: "/tmp/apache-tomcat-{{ tomcat_version }}.tar.gz"
+        dest: "{{ tomcat_home }}"
