--- a/activity/tomcat.yml
+++ b/activity/tomcat.yml
@@ -16,7 +16,7 @@
     - name: Download tomcat
       get_url:
         url: "https://dlcdn.apache.org/tomcat/tomcat-9/v9.0.56/bin/apache-tomcat-9.0.56.tar.gz"
-        dest: "/tmp/apache-tomcat-9.0.56.tar.gz"
+        dest: "/opt/tomcat"
     - name: create directory
       file:
         path: /opt/tomcat
