--- a/activity/tomcat.yml
+++ b/activity/tomcat.yml
@@ -23,7 +23,7 @@
         state: directory
     - name: Extract tar file
       ansible.builtin.unarchive:
-        src: "/tmp/apache-tomcat-9.0.56.tar.gz"
+        src: "https://dlcdn.apache.org/tomcat/tomcat-9/v9.0.56/bin/apache-tomcat-9.0.56.tar.gz"
         dest: /opt/tomcat/
           
    
