--- a/activity/tomcat.yml
+++ b/activity/tomcat.yml
@@ -16,14 +16,14 @@
     - name: Download tomcat
       get_url:
         url: "https://dlcdn.apache.org/tomcat/tomcat-9/v9.0.56/bin/apache-tomcat-9.0.56.tar.gz"
-        dest: "/opt/tomcat"
+        dest: "/tmp/apache-tomcat-9.0.56.tar.gz"
     - name: create directory
       file:
         path: /opt/tomcat
         state: directory
     - name: Extract tar file
       ansible.builtin.unarchive:
-        src: "https://dlcdn.apache.org/tomcat/tomcat-9/v9.0.56/bin/apache-tomcat-9.0.56.tar.gz"
+        src: "/tmp/apache-tomcat-9.0.56.tar.gz"
         dest: /opt/tomcat/
           
    
