--- a/activity/tomcat.yml
+++ b/activity/tomcat.yml
@@ -25,5 +25,6 @@
       ansible.builtin.unarchive:
         src: "/tmp/apache-tomcat-9.0.56.tar.gz"
         dest: /opt/tomcat/
+        mode: 0755
           
    
