--- a/activity/tomcat.yml
+++ b/activity/tomcat.yml
@@ -26,5 +26,6 @@
         src: "/tmp/apache-tomcat-9.0.56.tar.gz"
         dest: /opt/tomcat/
         mode: 0755
+        remote_src: yes
           
    
