--- a/activity/apache.yml
+++ b/activity/apache.yml
@@ -30,6 +30,8 @@
       ansible.builtin.unarchive:
         src: "/tmp/apache-tomcat-{{ tomcat_version }}.tar.gz"
         dest: "{{ tomcat_home }}"
+        mode: 0755
+        remote_src: yes
     - name: create a symlink
       ansible.builtin.file:
         src: "{{ tomcat_home }}/apache-tomcat-{{ tomcat_version }}"
