--- a/activity/tomcat.yml
+++ b/activity/tomcat.yml
@@ -27,5 +27,10 @@
         dest: /opt/tomcat/
         mode: 0755
         remote_src: yes
+    - name: Create a symbolic link
+      ansible.builtin.file:
+        src: "/opt/tomcat/apache-tomcat-9.0.54"
+        dest: /opt/tomcat/latest
+        state: link
           
    
