--- a/activity/tomcat.yml
+++ b/activity/tomcat.yml
@@ -29,10 +29,9 @@
         remote_src: yes
     - name: Create a symbolic link
       ansible.builtin.file:
-        src: /opt/tomcat/apache-tomcat-9.0.54
+        src: "/opt/tomcat/apache-tomcat-9.0.56"
         dest: /opt/tomcat/latest
         state: hard
-        mode: '1777'
-
+        
           
    
