--- a/activity/tomcat.yml
+++ b/activity/tomcat.yml
@@ -50,7 +50,7 @@
       file:
         path: "{{ item }}"
         mode: 0751
-      with_items: "{{ tomcat_executables }}"
+      with_items: /etc/systemd/system/tomcat.service
     - name: tomcat service
       copy: 
         src: tomcat.service
