--- a/activity/tomcat.yml
+++ b/activity/tomcat.yml
@@ -50,8 +50,8 @@
       file:
         path: "{{ item }}"
         mode: 0751
-      with_items: D:\ansible\activity\tomcat.service
+      with_items: "{{ tomcat_executables }}"
     - name: tomcat service
       copy: 
         src: tomcat.service
-        state: started
+        dest: /etc/systemd/system/tomcat.service
