--- a/activity/tomcat.yml
+++ b/activity/tomcat.yml
@@ -55,3 +55,10 @@
       copy: 
         src: tomcat.service
         dest: /etc/systemd/system/tomcat.service
+  handlers:
+    - name: reload and enable tomcat
+      ansible.builtin.systemd:
+        name: tomcat.service
+        daemon_reload: yes
+        enabled: yes
+        state: restarted 
